syntax = "proto3";

package wantslist;

message Config {
  repeated WantList lists = 1;
}

message WantListEntry {
  int32 want = 1;
  int32 index = 2; 
}

message WantList {
  string name = 1;
  repeated WantListEntry wants = 2;
}


message AddWantListRequest {
  WantList add = 1;
}

message AddWantListResponse {}

message GetWantListRequest {}

message GetWantListResponse {}

service WantService {
  rpc AddWantList(AddWantListRequest) returns (AddWantListResponse) {};
  //rpc GetWantList(GetWantListRequest) returns (GetWantListResponse) {};
}